fix the react/jsx-tag-spacing error in the ButtonPanel component

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,11 +30,3 @@
   height: 100%;
   text-align: center;
 }
-
-/*.btn-medium {
-  width: 25%;
-}
-
-.btn-large {
-  width: 50%;
-}*/
